# lemonhive

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TASK.md  build-poetry.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  start-server.sh
src/: main.py
src/api/: controllers.py  gcp_storage.py  schemas.py  services.py  tests.py  utils.py
