[tool.poetry]
name = "lemonhive"
version = "0.1.0"
description = ""
authors = ["Mehran Kader <kmehran.1106@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
Flask = "^2.2.2"
pytest = "^7.1.2"
google-cloud-storage = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
